# kepler-net

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: config.yaml
configs/dataset/: kepler.yaml
configs/model/: base_cnn.yaml
data/interim/: koi_catalog.csv
scripts/: build_dataset.py
src/kepler_net/data/: __init__.py  ingest.py  preprocess.py
src/kepler_net/evaluation/: evaluate.py
src/kepler_net/models/: cnn_1d.py
src/kepler_net/training/: trainer.py
src/kepler_net/utils/: logger.py
